--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react-redux": "^4.0.0",
     "react-router": "^0.13.5",
     "redux": "^3.0.4",
-    "redux-thunk": "^1.0.0"
+    "redux-thunk": "^1.0.0",
+    "redux-logger": "^2.0.4"
   },
   "devDependencies": {
     "babel-core": "^6.1.2",
